--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "alibabacloud/client",
+  "name": "meioco3/alibabacloud-client",
   "homepage": "https://www.alibabacloud.com/",
   "description": "Alibaba Cloud Client for PHP - Use Alibaba Cloud in your PHP project",
   "keywords": [
